--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="256"
-          android:versionName="2.5.6">
+          android:versionCode="257"
+          android:versionName="2.5.7">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -209,6 +209,12 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".InvoiceDetailsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".HighDemandAreaActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
