--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -231,6 +231,12 @@
         </activity>
 
         <activity
+            android:name=".RideDetailsNewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".DriverRateCard"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
