--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="257"
-          android:versionName="2.5.7">
+          android:versionCode="258"
+          android:versionName="2.5.8">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -244,6 +244,12 @@
 
         <activity
             android:name=".HighDemandAreaActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".DriverRideHistoryNew"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
