--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="260"
-          android:versionName="2.6.0">
+          android:versionCode="259"
+          android:versionName="2.5.9">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -313,6 +313,8 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER"/>
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".home.utils.LocationReceiverBG"/>
 
 
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService"/>
