--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -256,6 +256,11 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity
+            android:name=".chat.ChatActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
 
         <service
             android:name="product.clicklabs.jugnoo.driver.DriverLocationUpdateService"
