--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -291,6 +291,14 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".IncomingSmsReceiverReg"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".services.NotificationService"
             android:enabled="true"
