--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         android:allowBackup="true"
         android:icon="@drawable/jugnoo_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
