--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest package="product.clicklabs.jugnoo.driver"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="290"
-          android:versionName="2.9.0">
+          >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -33,6 +32,7 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <uses-permission
         android:name="android.permission.CAMERA"
