--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -50,20 +50,20 @@
         android:required="false" />
 
     <permission
-        android:name="product.clicklabs.jugnoo.driver.permission.C2D_MESSAGE"
+        android:name="${applicationId}.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="product.clicklabs.jugnoo.driver.permission.C2D_MESSAGE" />
+    <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
 
     <permission
-        android:name="product.clicklabs.jugnoo.driver.permission.MAPS_RECEIVE"
+        android:name="${applicationId}.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <uses-permission android:name="product.clicklabs.jugnoo.driver.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="${applicationId}.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
