--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -94,6 +94,7 @@
         </service>
         <activity
             android:name=".ui.DriverSplashActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
