--- a/JugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     ext.kotlin_version = '1.2.31'
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -15,5 +19,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
