--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -110,6 +110,7 @@
             android:name=".ui.DriverSplashActivity"
             android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
+            android:configChanges="layoutDirection|locale"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
