--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -3,10 +3,6 @@
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19"/>
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -74,6 +70,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:screenOrientation="portrait"
+        android:resizeableActivity="false"
         android:theme="@style/AppTheme"
         android:supportsRtl="true"
         tools:replace="android:icon">
@@ -107,7 +104,7 @@
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/SplashThemeNormal"
             android:label="@string/app_name"
-            android:configChanges="layoutDirection|locale"
+            android:configChanges="locale"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
