--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -116,6 +116,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.ManualRideActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/AppTheme"
+            android:label="@string/title_manual_ride"
+            android:configChanges="layoutDirection|locale"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name=".SplashLogin"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
