--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -533,6 +533,9 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".support.SupportMailActivity"
                   android:screenOrientation="portrait"/>
+        <activity
+            android:name=".AboutActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
