--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
         <activity
             android:name=".ui.DriverSplashActivity"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/SplashTheme"
+            android:theme="@style/SplashThemeNormal"
             android:label="@string/app_name"
             android:configChanges="layoutDirection|locale"
             android:screenOrientation="portrait">
