--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -133,7 +133,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".StripeConnectActivity"
+            android:name=".stripe.connect.StripeConnectActivity"
             android:label="@string/stripe_connect_title"
             android:screenOrientation="portrait" />
         <activity
@@ -537,7 +537,7 @@
             android:name=".AboutActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".stripe.ui.StripeCardsActivity"
+            android:name=".stripe.wallet.StripeCardsActivity"
             android:screenOrientation="portrait"/>
 
 
