--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -518,6 +518,11 @@
             android:name=".AboutActivity"
             android:screenOrientation="portrait"/>
         <activity
+            android:name=".EditRateCardActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            />
+        <activity
             android:name=".stripe.wallet.StripeCardsActivity"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
