--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -526,6 +526,12 @@
             android:screenOrientation="portrait"/>
 
 
+        <activity
+            android:name=".IncentiveActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+
+
     </application>
 
 </manifest>
