--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -505,6 +505,10 @@
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".emergency.EmergencyActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
 
     </application>
 
