--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -512,11 +512,15 @@
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name=".heremaps.HereMapsActivity"
+            android:name=".heremaps.activity.HereMapsActivity"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".heremaps.HereMapsImageCaptureActivity"
+            android:name=".heremaps.activity.HereMapsImageCaptureActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".heremaps.activity.HereMapsFeedbackActivity"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
         <provider
