--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -71,6 +71,12 @@
         android:supportsRtl="true"
         tools:replace="android:icon">
         <provider
+            android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
+            android:authorities="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
+            android:exported="false"
+            android:grantUriPermissions="true" />
+
+        <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="@string/file_provider"
             android:exported="false"
