--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -93,6 +93,11 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
+        <activity android:name=".IncomeDetailsActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" />
+
         <service
             android:name=".MyInstanceIDListenerService"
             android:exported="false">
