--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -98,6 +98,11 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name" />
 
+        <activity android:name=".RequestActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/TransparentTheme"
+            android:launchMode="singleTask" />
+
         <service
             android:name=".MyInstanceIDListenerService"
             android:exported="false">
