--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -101,6 +101,7 @@
         <activity android:name=".RequestActivity"
             android:screenOrientation="portrait"
             android:theme="@style/TransparentTheme"
+            android:launchMode="singleTask"
             android:label=""/>
 
         <service
