--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
         tools:replace="android:icon">
         <provider
             android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
-            android:authorities="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
+            android:authorities="${authorities}"
             android:exported="false"
             android:grantUriPermissions="true" />
 
@@ -524,11 +524,6 @@
             android:name=".heremaps.activity.HereMapsFeedbackActivity"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
-        <provider
-            android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
-            android:authorities="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
-            android:exported="false"
-            android:grantUriPermissions="true" />
 
         <activity
             android:name=".emergency.EmergencyActivity"
