--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -69,10 +69,11 @@
         android:largeHeap="true"
         android:resizeableActivity="false"
         android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         tools:replace="android:icon"
         android:networkSecurityConfig="@xml/network_security_config"
-        >
+        tools:ignore="UnusedAttribute">
         <provider
             android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
             android:authorities="${authorities}"
