--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -537,6 +537,9 @@
             android:name=".DriverTasksActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".PushClickActivity"
+            android:label="@string/app_name"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
