--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -74,11 +74,6 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="UnusedAttribute">
 
-        <activity
-            android:name=".DestinationRideActivity"
-            android:label="@string/title_activity_destination_ride"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
         <provider
             android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
             android:authorities="${authorities}"
@@ -555,6 +550,10 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".DestinationRideActivity"
+            android:label="@string/title_activity_destination_ride"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
