--- a/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         android:supportsRtl="true"
         tools:replace="android:icon"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute">
         <provider
             android:name="product.clicklabs.jugnoo.driver.utils.PhotoProvider"
