--- a/JugnooNewDriver/jugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/jugnooNewDriver/build.gradle
@@ -60,7 +60,7 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         multiDexEnabled true
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 6010
         versionName "60.1.0"
@@ -72,7 +72,7 @@ android {
         buildConfigField "String", "MAPS_CLIENT", "\"\""
         buildConfigField "String", "MAPS_PRIVATE_KEY", "\"\""
         buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
-        buildConfigField "String", "MAPS_BROWSER_KEY", "\"\""
+        buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0\""
         buildConfigField "String", "LIVE_URL", "\"https://prod-autos-api.jugnoo.in\""
         dimension "full"
         buildConfigField "String", "MAPS_CACHING_SERVER_URL", "\"https://maps-api.tookanapp.com\""
@@ -98,7 +98,8 @@ android {
                     'proguard-rules.txt'
         }
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
             zipAlignEnabled false
             buildConfigField "boolean", "DEBUG_MODE", "false"
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
@@ -199,6 +200,13 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     //implementation 'com.github.nkzawa:socket.io-client:0.5.2'
     implementation 'io.socket:socket.io-client:1.0.0'
+
+    // androidx security dependency
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+
+    // root checker library
+    implementation 'com.scottyab:rootbeer-lib:0.0.8'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
