--- a/JugnooNewDriver/jugnooNewDriver/build.gradle
+++ b/JugnooNewDriver/jugnooNewDriver/build.gradle
@@ -72,8 +72,8 @@ android {
         buildConfigField "String", "MAPS_CLIENT", "\"\""
         buildConfigField "String", "MAPS_PRIVATE_KEY", "\"\""
         buildConfigField "boolean", "MAPS_APIS_SIGN", "false"
-        buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0\""
-        buildConfigField "String", "LIVE_URL", "\"https://prod.taxiye.com\""
+        buildConfigField "String", "MAPS_BROWSER_KEY", "\"AIzaSyDtxq1wWwO3NLmMKmMXZnf3vxicTP8EWKU\""
+        buildConfigField "String", "URL", "https://prod.taxiye.com:4012"
         dimension "full"
         buildConfigField "String", "MAPS_CACHING_SERVER_URL", "\"https://maps-api.tookanapp.com\""
 
